# aoc2025

./: CMakeLists.txt  README.md
src/01/: CMakeLists.txt  part1.cpp  part2.cpp  t2.txt  t3.txt
src/02/: CMakeLists.txt  part1.cpp  part2.cpp
src/03/: CMakeLists.txt  part1.cpp  part2.cpp
src/04/: CMakeLists.txt  part1.cpp  part2.cpp
src/05/: CMakeLists.txt  part1.cpp  part2.cpp
src/06/: CMakeLists.txt  part1.cpp  part2.cpp
src/07/: CMakeLists.txt  part1.cpp  part2.cpp
src/08/: CMakeLists.txt  part1.cpp  part2.cpp
src/09/: CMakeLists.txt  part1.cpp  part2.cpp
src/10/: CMakeLists.txt  part1.cpp  part2.cpp
src/11/: CMakeLists.txt  part1.cpp  part2.cpp
templates/: CMakeLists.txt  part2.cpp
utils/: Matrix.h  utils.cpp  utils.h
